--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           architecture: 'x64'
           distribution: 'full'
-          version: '8.2'
+          version: 'stable'
       - name: Install Package and its Dependencies
         run: raco pkg install --auto --batch
       - name: Run Tests
