--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,4 +16,6 @@ jobs:
       - name: Install Package and its Dependencies
         run: raco pkg install --auto --batch
       - name: Run Tests
-        run: raco test -p emmy
+        uses: GabrielBB/xvfb-action@v1
+        with:
+            run: raco test -p emmy
